~ 2026.01.18
AdminController, AdminRequestDto, AdminResponseDto, AdminRepository, AdminService - 관리자 Controller, Dto, Repository, Service 클래스 구현
UserStatus - 유저 삭제를 위한 ENUM 추가 (soft delete -> hard delete 하기 위한 파일)
AdminLog - 코멘트 수정 및 ReportReson 추가
ImageUploadController - 댓글 이미지 업로드 메소드 파라미터 수정
Comment, User - deletedAt 댓글 삭제 요청 날짜 추가, userStatus 추가(유저 삭제를 할 때 soft delete와 hard delete를 하기 위해)
CommentResponseDto, CommentLike, Post  - 단순 코멘트 추가 및 수정
ActionType - ENUM 추가
CommentRepository, PostRepository - hard delete 메소드 추가
CommentService, PostService - TTL 기반 물리 삭제 기능 추가 -> 직접 삭제 코드 지움. , 본인이 작성한 댓글, 게시글은 신고할 수 없도록 검증 코드 추가